# table2db

./: .gitignore  README.md  pyproject.toml
docs/: design.md  design.zh-cn.md
eval/: README.md  golden_builder.py  scorer.py
eval/golden_db_skill/: SKILL.md  golden_builder.py  scorer.py
eval/golden_dbs/deliverables/: 2026 Flat Rate Shipping Analysis.db  Additional Shipments Needed Updated - July 2025.db  Aqua Nor 2025 Prospect LakeHealth DO Sensor List edits.db  Aurisic_Amortization_4-25.db  Aurisic_Financials_4-25-1.db  Beutist Q124 Risks SET SELLING final_v2.db  Bulk Form - Arizona Pathology.db  Bulk Form - Canyon Pathology .db  Bulk Form - Minnesota Pathology.db  CNC Hardware_Interface_Table.db  Catch up Plan.db  Chief Key Indicators 5 Year.db  Cleanup Schedule.db  Competitive Pricing Strategy.db  Completed Week One Test Plan.db  Correlation Matrix.db  Cost and time breakdown.db  Cover Plate Manufacturing Steps.db  Daily Closed Operational Report June 27, 2025.db  Daily Shipment Manifest 062525.db  (+45 more)
table2db/: __init__.py  cli.py  converter.py  describe.py  errors.py  models.py
table2db/loaders/: __init__.py  base.py  sqlite_loader.py
table2db/pipeline/: cleaner.py  island_detector.py  loader.py  reader.py  relator.py  structure.py  typer.py
tests/: conftest.py  generate_fixtures.py  generate_outputs.py  test_async.py  test_cleaner.py  test_cli.py  test_converter.py  test_describe.py  test_island_detector.py  test_loader.py  test_loaders.py  test_models.py  test_phase2.py  test_quality.py  test_reader.py  test_relator.py  test_structure.py  test_typer.py
(+129 files in other folders)
